Fix a minor formatting issue ...
Was truncating the overflow on the dates in the employment section if
months were used…

--- a/src/resume/css/_base.css
+++ b/src/resume/css/_base.css
@@ -245,8 +245,8 @@ p {
         }
         .upper-row {
             position: relative;
-            overflow: hidden;
-            margin-bottom: 2px;
+            /*overflow: hidden;
+            margin-bottom: 2px;*/
         }
         .job-title {
             color: $exp_text1;
